--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,12 +9,15 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.8, 3.9, 3.10, 3.11]
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -22,3 +25,11 @@ jobs:
           pip install -e .
       - name: Run tests
         run: pytest -q
+      - name: Black check
+        run: |
+          python -m pip install black
+          black --check .
+      - name: Type check
+        run: |
+          python -m pip install mypy
+          python -m mypy src
