fix(discord): use await client.start(), add privileged-intents handling and degraded fallback; add DB insert logging; add exporter and helper scripts; update .gitignore

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-# Runtime requirements (if any)
-# Example:
-# requests>=2.28
+# Runtime requirements (used by collectors)
+discord.py>=2.3.0
+aiosqlite>=0.18.0
+python-dotenv>=1.0.0
+websockets>=11.0
